{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "movement",
            "id": "71331439-5492-48cc-b917-f1a10ab75686",
            "actions": [
                {
                    "name": "walkLeft",
                    "type": "Button",
                    "id": "85e8138f-d417-463e-bd57-f7cc750ea1ec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "walkRight",
                    "type": "Button",
                    "id": "4ee7d6d0-68a6-4231-94ee-520f581b4566",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b3c1a5d2-cb82-40bc-8709-1a3643c09120",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "walkLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "372563db-7dab-4c37-a77a-a1a4919e2e51",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "walkLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d375bb1f-0e0c-4557-9853-c6f977042787",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "walkRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "96c0751a-65c9-4182-907a-b8164f1cd384",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "walkRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "inventory",
            "id": "6e2851ba-2339-42ac-adf9-8da17b2c0204",
            "actions": [
                {
                    "name": "pickUpItem",
                    "type": "Button",
                    "id": "79604d2d-6cd2-42fe-9517-aa16c23b21bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "be5fe192-781c-45de-9e16-51ca87f9725c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "pickUpItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}